--- a/petstore-app/src/main/resources/database.properties
+++ b/petstore-app/src/main/resources/database.properties
@@ -1,6 +1,6 @@
-jdbc.driverClassName: com.mysql.jdbc.Driver
+jdbc.driverClassName: ${jdbc.driverClassName}
 jdbc.url: ${jdbc.url}
 jdbc.username: ${jdbc.username}
 jdbc.password: ${jdbc.password}
 
-hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+hibernate.dialect: ${hibernate.dialect}
