--- a/petstore-infrastructure/pom.xml
+++ b/petstore-infrastructure/pom.xml
@@ -10,21 +10,6 @@
     <artifactId>petstore-infrastructure</artifactId>
     <name>petstore-infrastructure</name>
 
-    <repositories>
-        <repository>
-            <id>c5-public-repository</id>
-            <name>Carbon 5 repository</name>
-            <url>http://mvn.carbonfive.com/public</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>c5-public-repository</id>
-            <name>Carbon 5 repository</name>
-            <url>http://mvn.carbonfive.com/public</url>
-        </pluginRepository>
-    </pluginRepositories>
-
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -73,6 +58,7 @@
         <dependency>
             <groupId>com.carbonfive.db-support</groupId>
             <artifactId>db-migration</artifactId>
+            <scope>test</scope>
         </dependency>
         <!-- carbon 5 requires commons-collections -->
         <dependency>
@@ -100,6 +86,24 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.carbonfive.db-support</groupId>
+                <artifactId>db-migration-maven-plugin</artifactId>
+                <version>0.9.9-m2</version>
+                <configuration>
+                    <url>${jdbc.url}</url>
+                    <username>${jdbc.username}</username>
+                    <password>${jdbc.password}</password>
+                    <migrationsPath>${project.build.scriptSourceDirectory}/migrations</migrationsPath>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>5.1.11</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -138,11 +142,6 @@
             </plugin>
         </plugins>
 
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
-        </resources>
         <testResources>
             <testResource>
                 <directory>src/test/resources</directory>
@@ -153,50 +152,10 @@
 
     <profiles>
         <profile>
-            <id>development</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-                <property>
-                    <name>env.type</name>
-                    <value>dev</value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.carbonfive.db-support</groupId>
-                        <artifactId>db-migration-maven-plugin</artifactId>
-                        <version>0.9.9-m2</version>
-                        <configuration>
-                            <url>${jdbc.url}</url>
-                            <username>${jdbc.username}</username>
-                            <password>${jdbc.password}</password>
-                            <migrationsPath>${project.build.scriptSourceDirectory}/migrations</migrationsPath>
-                        </configuration>
-                        <dependencies>
-                            <dependency>
-                                <groupId>mysql</groupId>
-                                <artifactId>mysql-connector-java</artifactId>
-                                <version>5.1.11</version>
-                            </dependency>
-                        </dependencies>
-                        <executions>
-                            <execution>
-                                <phase>validate</phase>
-                                <goals>
-                                    <goal>check</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
             <id>test</id>
             <activation>
                 <property>
-                    <name>env.type</name>
+                    <name>env</name>
                     <value>test</value>
                 </property>
             </activation>
@@ -207,9 +166,9 @@
                         <artifactId>db-migration-maven-plugin</artifactId>
                         <version>0.9.9-m2</version>
                         <configuration>
-                            <url>jdbc:mysql://localhost:3306/petstore_test</url>
-                            <username>${jdbc.username}</username>
-                            <password>${jdbc.password}</password>
+                            <url>${test.jdbc.url}</url>
+                            <username>${test.jdbc.username}</username>
+                            <password>${test.jdbc.password}</password>
                             <migrationsPath>${project.build.scriptSourceDirectory}/migrations</migrationsPath>
                         </configuration>
                         <dependencies>
@@ -219,46 +178,6 @@
                                 <version>5.1.11</version>
                             </dependency>
                         </dependencies>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>pre-production</id>
-            <activation>
-                <property>
-                    <name>env.type</name>
-                    <value>pre-prod</value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.carbonfive.db-support</groupId>
-                        <artifactId>db-migration-maven-plugin</artifactId>
-                        <version>0.9.9-m2</version>
-                        <configuration>
-                            <url>${jdbc.url}</url>
-                            <username>${jdbc.username}</username>
-                            <password>${jdbc.password}</password>
-                            <migrationsPath>${project.build.scriptSourceDirectory}/migrations</migrationsPath>
-                        </configuration>
-                        <dependencies>
-                            <dependency>
-                                <groupId>mysql</groupId>
-                                <artifactId>mysql-connector-java</artifactId>
-                                <version>5.1.11</version>
-                            </dependency>
-                        </dependencies>
-
-                        <executions>
-                            <execution>
-                                <phase>validate</phase>
-                                <goals>
-                                    <goal>reset</goal>
-                                </goals>
-                            </execution>
-                        </executions>
                     </plugin>
                 </plugins>
             </build>
