Don't start embedded jetty when running cargo

--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -254,9 +254,9 @@
                             </includes>
                             <systemPropertyVariables>
                                 <!-- Uncomment to change webdriver and jetty runtime options -->
-                                <!--<webdriver.factory.class>test.support.com.pyxis.petstore.web.webdriver.SingletonWebDriverFactorydriver.factory.class>-->
+                                <!--<webdriver.factory.class>test.support.com.pyxis.petstore.web.webdriver.ClassicWebDriverFactory</webdriver.factory.class>-->
                                 <!--<webdriver.class>org.openqa.selenium.chrome.ChromeDriver</webdriver.class>-->
-                                <!--<serverdriver.factory.class>test.support.com.pyxis.petstore.web.serverdriver.SingletonServerDriverFactory</serverdriver.factory.class>-->
+                                <serverdriver.factory.class>test.support.com.pyxis.petstore.web.serverdriver.ExternallyManagedServerDriverFactory</serverdriver.factory.class>
                                 <timeServer.host>${test.timeServer.host}</timeServer.host>
                                 <timeServer.port>${test.timeServer.port}</timeServer.port>
                                 <server.port>${test.server.port}</server.port>
