--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>com.pyxis.matchers</groupId>
             <artifactId>all-matchers</artifactId>
-            <version>1.3</version>
+            <version>1.4-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <!-- Declare junit after hamcrest because junit includes org.hamcrest.Matcher
@@ -372,8 +372,4 @@
         </snapshotRepository>
         <downloadUrl>${pyxis.distributionManagement.downloadUrl}</downloadUrl>
     </distributionManagement>
-    <scm>
-        <connection>scm:git:git://github.com/testinfected/petstore.git</connection>
-        <url>scm:git:git://github.com/testinfected/petstore.git</url>
-    </scm>
 </project>
