Moved clock and nist stuff to 'time' project

--- a/petstore-infrastructure/pom.xml
+++ b/petstore-infrastructure/pom.xml
@@ -70,6 +70,10 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.pyxis.time</groupId>
+            <artifactId>time</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
