--- a/petstore-domain/pom.xml
+++ b/petstore-domain/pom.xml
@@ -26,6 +26,10 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.pyxis.time</groupId>
+            <artifactId>time</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
