--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>com.pyxis.matchers</groupId>
             <artifactId>all-matchers</artifactId>
-            <version>1.3</version>
+            <version>1.4-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <!-- Declare junit after hamcrest because junit includes org.hamcrest.Matcher
@@ -274,6 +274,11 @@
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>1.4</version>
+            </dependency>
+            <dependency>
+                <groupId>com.pyxis.time</groupId>
+                <artifactId>time</artifactId>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
