--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -162,6 +162,11 @@
             <artifactId>cglib</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.pyxis.time</groupId>
+            <artifactId>time</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
