--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -64,13 +64,13 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-support</artifactId>
-            <version>2.0a6</version>
+            <version>2.0b3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-chrome-driver</artifactId>
-            <version>2.0a6</version>
+            <version>2.0b3</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-firefox-driver</artifactId>
-            <version>2.0a6</version>
+            <version>2.0b3</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
