--- a/pom.xml
+++ b/pom.xml
@@ -280,6 +280,12 @@
                 <artifactId>time</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>com.pyxis.time</groupId>
+                <artifactId>time</artifactId>
+                <version>1.0-SNAPSHOT</version>
+                <type>test-jar</type>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
