--- a/pom.xml
+++ b/pom.xml
@@ -303,15 +303,14 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
-                    <configuration>
-                        <encoding>UTF-8</encoding>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
     </build>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <context.path>/petstore</context.path>
         <!-- Log files go to parent/logs -->
         <log.dir>${project.basedir}/../logs</log.dir>
