--- a/petstore-domain/pom.xml
+++ b/petstore-domain/pom.xml
@@ -27,14 +27,8 @@
             <artifactId>hibernate-validator</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.pyxis.time</groupId>
+            <groupId>org.testinfected</groupId>
             <artifactId>time</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.pyxis.time</groupId>
-            <artifactId>time</artifactId>
-            <type>test-jar</type>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
