--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
 
     <repositories>
         <repository>
+            <id>sonatype-snapshots</id>
+            <name>Sonatype OSS</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases><enabled>false</enabled></releases>
+            <snapshots><enabled>true</enabled></snapshots>
+        </repository>
+        <repository>
             <id>pyxis</id>
             <name>Pyxis Nexus Maven Repository</name>
             <url>https://www.pyxis-tech.ca/nexus/content/groups/public</url>
@@ -276,15 +283,9 @@
                 <version>1.4</version>
             </dependency>
             <dependency>
-                <groupId>com.pyxis.time</groupId>
+                <groupId>org.testinfected</groupId>
                 <artifactId>time</artifactId>
                 <version>1.0-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-                <groupId>com.pyxis.time</groupId>
-                <artifactId>time</artifactId>
-                <version>1.0-SNAPSHOT</version>
-                <type>test-jar</type>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -369,17 +370,4 @@
             </activation>
         </profile>
     </profiles>
-    <distributionManagement>
-        <repository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>${pyxis.distributionManagement.repository.id}</id>
-            <url>${pyxis.distributionManagement.repository.url}</url>
-        </repository>
-        <snapshotRepository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>${pyxis.snapshot.distributionManagement.repository.id}</id>
-            <url>${pyxis.snapshot.distributionManagement.repository.url}</url>
-        </snapshotRepository>
-        <downloadUrl>${pyxis.distributionManagement.downloadUrl}</downloadUrl>
-    </distributionManagement>
 </project>
