--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.pyxis.matchers</groupId>
+            <groupId>org.testinfected</groupId>
             <artifactId>all-matchers</artifactId>
             <version>1.4-SNAPSHOT</version>
             <scope>test</scope>
