--- a/petstore-domain/pom.xml
+++ b/petstore-domain/pom.xml
@@ -27,7 +27,7 @@
             <artifactId>hibernate-validator</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.testinfected</groupId>
+            <groupId>org.testinfected.time</groupId>
             <artifactId>time</artifactId>
         </dependency>
     </dependencies>
