--- a/pom.xml
+++ b/pom.xml
@@ -276,9 +276,9 @@
                 <version>1.4</version>
             </dependency>
             <dependency>
-                <groupId>org.testinfected</groupId>
+                <groupId>org.testinfected.time</groupId>
                 <artifactId>time</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.0</version>
             </dependency>
             <dependency>
                 <groupId>nekohtml</groupId>
