Move build properties in pom to external properties file

--- a/petstore-app/pom.xml
+++ b/petstore-app/pom.xml
@@ -83,6 +83,7 @@
     </dependencies>
 
     <properties>
+        <main.basedir>${project.parent.basedir}</main.basedir>
         <!-- maven-resources-plugin does not seen to interpolate project.baseUri, help it out -->
         <projectBaseUri>${project.baseUri}</projectBaseUri>
     </properties>
