--- a/petstore-domain/pom.xml
+++ b/petstore-domain/pom.xml
@@ -32,6 +32,10 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <main.basedir>${project.parent.basedir}</main.basedir>
+    </properties>
+
 	<build>
 		<plugins>
 			<plugin>
