--- a/petstore-infrastructure/pom.xml
+++ b/petstore-infrastructure/pom.xml
@@ -76,6 +76,10 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <main.basedir>${project.parent.basedir}</main.basedir>
+    </properties>
+
     <build>
         <!-- Make sure Maven2 generates an absolute path, since Hudson does not support Maven3 yet -->
         <scriptSourceDirectory>${project.basedir}/src/main/scripts</scriptSourceDirectory>
