--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -178,6 +178,10 @@
         </testResources>
     </build>
 
+    <properties>
+        <main.basedir>${project.parent.basedir}</main.basedir>
+    </properties>
+
     <profiles>
         <profile>
             <id>development</id>
